--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.51.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
